# binance-json-parsing

./: Cargo.toml
src/: main.rs
